--- a/.github/workflows/mega.yml
+++ b/.github/workflows/mega.yml
@@ -2,7 +2,9 @@ name: Mega Bot
 
 on:
   schedule:
+    # Run every 5 minutes
     - cron: "*/5 * * * *"
+  # Allow manual run from Actions tab
   workflow_dispatch:
 
 jobs:
@@ -11,9 +13,11 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
@@ -22,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install ccxt pandas ta torch numpy joblib plotly
 
-      - name: Run Mega Bot
+      - name: Run Mega Bot (one cycle)
         env:
           BINANCE_KEY: ${{ secrets.BINANCE_KEY }}
           BINANCE_SECRET: ${{ secrets.BINANCE_SECRET }}
